fix spacing for the input

--- a/src/components/EmailForm/EmailForm.scss
+++ b/src/components/EmailForm/EmailForm.scss
@@ -133,7 +133,6 @@
 
         @include desktop {
             grid-area: email-input;
-            padding: 8px;
             max-height: 52px;
         }
     }
